tests/snapshots/lib__snapshots__report@invalid-regex.env_filter.snap
---
source: tests/snapshots.rs
assertion_line: 30
expression: "crate::target=warn/[[]\n"
---

  ⚠ 1 directives were ignored as invalid

Error: tracing_filter::simple::Warning::InvalidRegex (https://docs.rs/tracing-filter/0.0.0-dev/tracing-filter/enum.Warning.html#variant.InvalidRegex)

  ⚠ invalid regex specified
   ╭────
 1 │ crate::target=warn/[[]
   ·                    ──┬─
   ·                      ╰── regex parse error:
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
1: [[]
    ^^
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
error: unclosed character class
   ╰────

